tdf#124896 CRASH: deleting sheet

regression from
    commit 7282014e362a1529a36c88eb308df8ed359c2cfa
    Date:   Fri Feb 1 15:15:16 2019 +0100
    tdf#50916 Makes numbers of columns dynamic.

Change-Id: I3913e14cadc11efa1d9e7405cdbaf96fe094508a